--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Angela Yu</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <title>Anurag Sharma❤️</title>
+  <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
   <link rel="icon" href="favicon.ico">
 </head>
@@ -16,13 +16,13 @@
       <h1>I'm Anurag.</h1>
       <h2>a <span class="pro">pro</span>grammer.</h2>
     </div>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
-    <img class="mountain" src="images/mountain.png" alt="mountain-img">
+    <img class="bottom-cloud" src="cloud.png" alt="cloud">
+    <img class="mountain" src="mountain.png" alt="mountain-img">
   </div>
 
   <div class="middle-container">
     <div class="profile">
-      <img class="anurag" src="images/Anurag download-modified.png" alt="anurag-profile-img">
+      <img class="anurag" src="Anurag download-modified.png" alt="anurag-profile-img">
       <h2>Hello.</h2>
       <p class="intro">I am a programmer and an enthusiastic entrepreneur.I ❤️ coding and trading in the stock markets.</p>
     </div>
